--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -47,12 +47,12 @@ footer {
 
 #header-left {
   text-align: center;
-  padding: 50px;
+  padding: 5vh 20px;
 }
 
 #header-right {
   text-align: center;
-  padding-top: 10%;
+  padding: 5vh 0;
 }
 
 #projects {
@@ -90,25 +90,29 @@ footer {
   font-size: 24pt;
   color: #ff9a9e;
   margin: 0 10px;
-  transition: ease 1s;
+  transition: ease 0.5s;
 }
 
 .social-link:hover {
-  color: #ffffff;
+  color: #d6d5f4;
 }
 
-@media only screen and (max-width: 900px) {
+@media only screen and (max-width: 1200px) {
   #header {
-    display: grid;
-    grid-template-columns: 50% 50%;
+    display: block;
+    padding: 20px;
+  }
+  #header-left,
+  #header-right {
+    padding: 0;
+    margin: 0;
   }
 
   #header-left {
-    text-align: center;
-    padding: 50px 0;
+    padding-bottom: 20px;
   }
-
   #header-right {
-    padding-top: 50%;
+    width: 60%;
+    margin: 0 auto;
   }
 }
