--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,11 +1,29 @@
 @import url("https://fonts.googleapis.com/css2?family=Karla&display=swap");
 /* font-family: 'Karla', sans-serif; */
-
+/*#fad0c4*/
 * {
   margin: 0;
   padding: 0;
   text-decoration: none;
   font-family: "Karla", sans-serif;
+}
+
+header {
+  text-align: right;
+  padding: 16px 0;
+  box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.1);
+}
+
+a.nav-link {
+  color: black;
+  padding: 16px 30px;
+  text-transform: uppercase;
+  transition: ease 1s;
+}
+
+a.nav-link:hover {
+  color: #fad0c4;
+  text-transform: uppercase;
 }
 
 main {
@@ -20,6 +38,12 @@ h1 {
   padding-bottom: 15px;
 }
 
+.heading {
+  text-transform: uppercase;
+  letter-spacing: 1.5pt;
+  text-align: center;
+}
+
 h2 {
   padding-bottom: 10px;
 }
@@ -30,7 +54,7 @@ h2 {
 
 footer {
   text-align: center;
-  padding-bottom: 5px;
+  padding-bottom: 10px;
 }
 
 #home-profile {
@@ -74,6 +98,10 @@ footer {
 
 .project-title:hover {
   color: #ff9a9e;
+}
+
+strong {
+  font-size: 16pt;
 }
 
 .project-date {
