updated layout and nabar for v2

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -12,10 +12,15 @@ header {
   text-align: right;
   padding: 16px 0;
   box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.1);
+  position: fixed;
+  background-color: rgb(255, 255, 255);
+  width: 100%;
+  top: 0;
 }
 
 a.nav-link {
   color: black;
+  font-size: 13pt;
   padding: 16px 30px;
   text-transform: uppercase;
   transition: ease 1s;
@@ -23,13 +28,22 @@ a.nav-link {
 
 a.nav-link:hover {
   color: #fad0c4;
-  text-transform: uppercase;
+}
+
+a#name {
+  float: left;
+  color: black;
+  font-size: 13pt;
+  padding: 0px 30px;
+  transition: ease 1s;
+}
+
+a#name:hover {
+  color: #fad0c4;
 }
 
 main {
-  width: 50%;
-  margin: 100px auto;
-  padding: 50px;
+  padding: 100px 10%;
   background-color: rgba(255, 154, 158, 0.2);
   border-radius: 10px;
 }
@@ -66,6 +80,7 @@ footer {
   width: 90%;
   margin: 0 auto;
   display: grid;
+  display: -ms-grid;
   grid-template-columns: 70% 30%;
 }
 
