--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -9,25 +9,26 @@
 }
 
 header {
+  background-color: #ffc2c5;
   text-align: right;
   padding: 16px 0;
   box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.1);
   position: fixed;
-  background-color: rgb(255, 255, 255);
   width: 100%;
   top: 0;
 }
 
 a.nav-link {
   color: black;
-  font-size: 13pt;
+  font-size: 12pt;
   padding: 16px 30px;
   text-transform: uppercase;
   transition: ease 1s;
 }
 
-a.nav-link:hover {
-  color: #fad0c4;
+a.nav-link:hover,
+a#name:hover {
+  color: white;
 }
 
 a#name {
@@ -38,21 +39,13 @@ a#name {
   transition: ease 1s;
 }
 
-a#name:hover {
-  color: #fad0c4;
-}
-
 main {
-  padding: 100px 10%;
-  background-color: rgba(255, 154, 158, 0.2);
+  padding: 150px 20% 100px 20%;
   border-radius: 10px;
 }
 
 h1 {
   padding-bottom: 15px;
-}
-
-.heading {
   text-transform: uppercase;
   letter-spacing: 1.5pt;
   text-align: center;
@@ -62,8 +55,10 @@ h2 {
   padding-bottom: 10px;
 }
 
-.about {
-  font-size: 14pt;
+p {
+  font-size: 13pt;
+  line-height: 16pt;
+  padding: 5px;
 }
 
 footer {
@@ -79,8 +74,8 @@ footer {
 #header {
   width: 90%;
   margin: 0 auto;
-  display: grid;
   display: -ms-grid;
+  display: grid;
   grid-template-columns: 70% 30%;
 }
 
@@ -100,12 +95,13 @@ footer {
 }
 
 .project-tile {
-  margin: 20px 0;
-  padding: 15px 45px;
+  margin: 30px 0;
+  padding: 2% 4%;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   border-radius: 5px;
   background-color: #fff;
 }
+
 .project-title {
   color: #000;
   transition: ease 0.8s;
@@ -158,4 +154,19 @@ strong {
     width: 60%;
     margin: 0 auto;
   }
+}
+
+.about-desc {
+  text-align: center;
+}
+
+#groups {
+  text-align: center;
+}
+
+.group-logo {
+  width: 20%;
+  margin: 30px 50px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
 }
