v2 ready for blog posts

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -192,6 +192,7 @@ footer {
 
 #more-blogs {
   text-align: center;
+  margin-top: 10px;
 }
 /*-------------------------------end blog posts-------------------------------*/
 
@@ -237,6 +238,9 @@ footer {
   padding: 30px;
   border-radius: 10px;
   box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.15);
+}
+#post-about {
+  text-align: center;
 }
 
 .social-link {
