--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -22,35 +22,6 @@
   --grey: rgb(102, 102, 102);
 }
 
-/*-----------------------------------navbar-----------------------------------*/
-header {
-  text-align: right;
-  padding: 16px 0;
-}
-
-a.nav-link {
-  color: var(--black);
-  font-size: 12pt;
-  padding: 16px 30px;
-  text-transform: uppercase;
-  transition: ease 1s;
-}
-
-a.nav-link:hover,
-a#name:hover {
-  color: var(--dark-pink);
-}
-
-a#name {
-  float: left;
-  color: var(--black);
-  font-size: 14pt;
-  padding: 0px 30px;
-  transition: ease 1s;
-  font-family: "Lora", serif;
-}
-/*---------------------------------end navbar---------------------------------*/
-
 h1,
 h2,
 h3 {
@@ -62,10 +33,12 @@ h1 {
   font-size: 20pt;
   letter-spacing: 1.5pt;
   text-align: center;
+  padding-bottom: 10px;
 }
 
 h2 {
   padding-bottom: 10px;
+  line-height: 24pt;
 }
 
 p,
@@ -114,6 +87,44 @@ footer {
   padding-bottom: 10px;
 }
 
+.link {
+  color: var(--dark-pink);
+  transition: ease 0.5s;
+}
+
+.link:hover {
+  color: var(--medium-pink);
+}
+
+/*-----------------------------------navbar-----------------------------------*/
+header {
+  text-align: right;
+  padding: 16px 0;
+}
+
+a.nav-link {
+  color: var(--black);
+  font-size: 12pt;
+  padding: 16px 30px;
+  text-transform: uppercase;
+  transition: ease 1s;
+}
+
+a.nav-link:hover,
+a#name:hover {
+  color: var(--dark-pink);
+}
+
+a#name {
+  float: left;
+  color: var(--black);
+  font-size: 14pt;
+  padding: 0px 30px;
+  transition: ease 1s;
+  font-family: "Lora", serif;
+}
+/*---------------------------------end navbar---------------------------------*/
+
 /*---------------------------------home header--------------------------------*/
 #hello {
   align-items: center;
@@ -141,7 +152,6 @@ footer {
   border-radius: 50%;
   float: right;
 }
-
 /*-------------------------------end home header------------------------------*/
 
 /*---------------------------------blog posts---------------------------------*/
@@ -194,66 +204,13 @@ footer {
   text-align: center;
   margin-top: 10px;
 }
-/*-------------------------------end blog posts-------------------------------*/
-
-#home-projects {
-  width: 80%;
-}
-
-#project-title {
-  text-align: left;
-  padding: 0;
-}
-
-#project-desc {
-  margin-top: 10px;
-}
-
-#project-tiles {
-  display: -ms-grid;
-  display: grid;
-  grid-template-columns: 2fr 3fr;
-  align-items: center;
-}
-
-.project-box {
-  margin: 0 30px;
-}
-
-#project-img {
-  width: 100%;
-  overflow: hidden;
-  border-radius: 15px;
-}
-
-#more-projects {
-  text-align: center;
-  color: var(--black);
-}
-
-#subscribe {
-  text-align: center;
-  width: 70%;
-  background-color: var(--beige);
-  padding: 30px;
-  border-radius: 10px;
-  box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.15);
-}
+/*--blog page--*/
 #post-about {
   text-align: center;
 }
+/*-------------------------------end blog posts-------------------------------*/
 
-.social-link {
-  font-size: 20pt;
-  color: var(--medium-pink);
-  margin: 0 10px;
-  transition: ease 0.5s;
-}
-
-.social-link:hover {
-  color: var(--dark-pink);
-}
-
+/*-----------------------------------teams------------------------------------*/
 #groups {
   text-align: center;
   background-color: var(--beige);
@@ -277,25 +234,79 @@ footer {
 .group-logo:hover {
   transform: scale(1.2);
 }
+/*--------------------------------end teams-----------------------------------*/
 
-.about-desc,
-#contact-info,
-#socials {
+/*---------------------------------projects-----------------------------------*/
+#home-projects {
+  width: 80%;
+  display: -ms-grid;
+  display: grid;
+  grid-template-columns: 2fr 3fr;
+  align-items: center;
+}
+
+#project-title {
+  text-align: left;
+  padding: 0;
+}
+
+#project-desc {
+  margin-top: 10px;
+}
+
+.project-tiles {
+  display: -ms-grid;
+  display: grid;
+  grid-template-columns: 5fr 4fr;
+  align-items: center;
+  margin: 80px 0;
+}
+
+.project-box {
+  margin: 0 30px;
+}
+
+#project-img {
+  width: 100%;
+  overflow: hidden;
+  border-radius: 10px;
+  box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.2);
+}
+
+#more-projects {
   text-align: center;
-  margin: 10px 50px;
-}
-
-#socials {
-  margin-top: 30px;
-}
-
-.project-title {
   color: var(--black);
-  transition: ease 0.8s;
+}
+/*--------------------------------end projects--------------------------------*/
+
+/*---------------------------------subscribe----------------------------------*/
+#subscribe {
+  text-align: center;
+  width: 70%;
+  background-color: var(--beige);
+  padding: 30px;
+  border-radius: 10px;
+  box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.15);
+}
+/*-------------------------------end subscribe--------------------------------*/
+
+/*-------------------------------social media---------------------------------*/
+.social-link {
+  font-size: 20pt;
+  color: var(--medium-pink);
+  margin: 20px 10px;
+  transition: ease 0.5s;
 }
 
-.project-title:hover {
+.social-link:hover {
   color: var(--dark-pink);
+}
+/*-----------------------------end social media-------------------------------*/
+
+/*----------------------------------about-------------------------------------*/
+.about-desc {
+  text-align: center;
+  margin: 30px 100px;
 }
 
 #about-photos {
@@ -306,14 +317,13 @@ footer {
   width: 30%;
   margin: 1%;
 }
+/*--------------------------------end about-----------------------------------*/
 
-.link {
-  color: var(--dark-pink);
-  transition: ease 0.5s;
-}
-
-.link:hover {
-  color: var(--medium-pink);
+/*---------------------------------contact------------------------------------*/
+#contact-info,
+.socials {
+  text-align: center;
+  margin: 10px 50px;
 }
 
 #contact-header {
@@ -321,3 +331,4 @@ footer {
   overflow: hidden;
   margin: 20px 0;
 }
+/*--------------------------------end contact---------------------------------*/
